plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.checkping'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // MySQL 의존성 추가
    runtimeOnly 'com.mysql:mysql-connector-j'

    // .env 설정 의존성 추가
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // Spring Security 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Optional: Spring Security Test (테스트용)
    testImplementation 'org.springframework.security:spring-security-test'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    implementation project(':module-service')
    implementation project(':module-common')
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(Test) {
    onlyIf { project.hasProperty('runtests') }
}

tasks.named('bootJar') {
    mainClass = 'com.checkping.api.ApiApplication'
}

tasks.register("prepareKotlinBuildScripModel") {}

tasks.bootJar { enabled = true }
tasks.jar { enabled = false }